fix align content

--- a/src/app/pages/wrapped/components/by-genre/by-genre.component.css
+++ b/src/app/pages/wrapped/components/by-genre/by-genre.component.css
@@ -25,6 +25,7 @@
 .genres {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: 30px;
   > .genre {
     background-size: contain;
